tests/codegen/fail/unsupported_capturing_closure_build.stderr
error: tests/codegen/fail/unsupported_capturing_closure_build.ql:4:25: LLVM IR backend foundation currently only supports a narrow non-`move` capturing-closure subset: immutable same-function scalar captures through direct/local-alias calls plus the current direct cleanup/guard-call paths
      let capture_first = () => first
                         ^^^^^^^^
